--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,16 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a65869e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a40abda0>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -522,16 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a6558f28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a4032b38>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,16 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a649b630>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f369ff8f668>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -591,16 +591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a63c17b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f369fec03c8>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -626,16 +626,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a6317198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f369fe0f470>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "0.45592363840539024"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
        "Name: WHOIS_COUNTRY, dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "Name: WHOIS_COUNTRY, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,16 +1014,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f36a61faf60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f369fe780b8>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 150,
    "metadata": {
     "scrolled": true
    },
@@ -1075,7 +1075,7 @@
        "Name: WHOIS_COUNTRY, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
        "4              4.0     0  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "Name: CHARSET, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 155,
    "metadata": {
     "scrolled": false
    },
@@ -1378,7 +1378,7 @@
        "Name: SERVER, dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,22 +1412,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "def clean_server(s):\n",
+    "    server=s.upper()\n",
+    "    if server.find(\"MICROSOFT\")!=-1: return \"Microsoft\"\n",
+    "    if server.find(\"APACHE\")!=-1: return \"Apache\"\n",
+    "    if server.find(\"NGINX\")!=-1: return \"Nginx\"\n",
+    "    return \"Other\"\n",
+    "websites.SERVER=websites.SERVER.apply(clean_server)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Apache       642\n",
+       "Other        503\n",
+       "Nginx        436\n",
+       "Microsoft    198\n",
+       "Name: SERVER, dtype: int64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Count `SERVER` value counts here\n"
+    "websites.SERVER.value_counts()\n"
    ]
   },
   {
@@ -1439,11 +1460,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "\n",
+    "website_dummy=pd.get_dummies(websites,prefix=[\"CHARSET\",\"SERVER\",\"WHOIS_COUNTRY\"],drop_first=True)\n"
    ]
   },
   {
@@ -1455,11 +1477,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "URL_LENGTH                int64\n",
+       "DIST_REMOTE_TCP_PORT      int64\n",
+       "REMOTE_IPS                int64\n",
+       "APP_BYTES                 int64\n",
+       "SOURCE_APP_BYTES          int64\n",
+       "APP_PACKETS               int64\n",
+       "DNS_QUERY_TIMES         float64\n",
+       "Type                      int64\n",
+       "CHARSET_ISO-8859-1        uint8\n",
+       "CHARSET_None              uint8\n",
+       "CHARSET_UTF-8             uint8\n",
+       "CHARSET_iso-8859-1        uint8\n",
+       "CHARSET_us-ascii          uint8\n",
+       "CHARSET_utf-8             uint8\n",
+       "CHARSET_windows-1251      uint8\n",
+       "CHARSET_windows-1252      uint8\n",
+       "SERVER_Microsoft          uint8\n",
+       "SERVER_Nginx              uint8\n",
+       "SERVER_Other              uint8\n",
+       "WHOIS_COUNTRY_CA          uint8\n",
+       "WHOIS_COUNTRY_ES          uint8\n",
+       "WHOIS_COUNTRY_GB          uint8\n",
+       "WHOIS_COUNTRY_IN          uint8\n",
+       "WHOIS_COUNTRY_JP          uint8\n",
+       "WHOIS_COUNTRY_NONE        uint8\n",
+       "WHOIS_COUNTRY_OTHER       uint8\n",
+       "WHOIS_COUNTRY_PA          uint8\n",
+       "WHOIS_COUNTRY_UK          uint8\n",
+       "WHOIS_COUNTRY_US          uint8\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "website_dummy.dtypes\n"
    ]
   },
   {
