A falta del bonus

--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -1247,13 +1247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "logreg=LogisticRegression()\n"
+    "logreg=LogisticRegression(solver='liblinear')\n"
    ]
   },
   {
@@ -1265,28 +1265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/molins/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
        "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
        "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,12 +1297,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9213483146067416\n",
+      "[[308   6]\n",
+      " [ 22  20]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "y_pred=logreg.predict(X_test)\n",
+    "print(accuracy_score(y_test,y_pred))\n",
+    "print(confusion_matrix(y_test,y_pred, labels=[0,1]))"
    ]
   },
   {
@@ -1322,12 +1327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "# Se ha obtenido un valor alto del coeficiente de correlación (mayor al 92%)\n",
+    "# De los valores que eran 0, ha predecido 308 bien, mientras que ha predecido 6 como 1.\n",
+    "# De los valores que eran 1, ha predecido 20 bien, mientras que ha predecido 22 como 0.\n",
+    "# El modelo no predice nada bien los casos maliciosos, puesto que falla en más del 50%."
    ]
   },
   {
@@ -1341,12 +1349,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=3, p=2,\n",
+       "                     weights='uniform')"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "kneig=KNeighborsClassifier(n_neighbors=3)\n",
+    "kneig.fit(X_train,y_train)"
    ]
   },
   {
@@ -1358,12 +1381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9382022471910112\n",
+      "[[304  10]\n",
+      " [ 12  30]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "y_pred=kneig.predict(X_test)\n",
+    "print(accuracy_score(y_test,y_pred))\n",
+    "print(confusion_matrix(y_test,y_pred, labels=[0,1]))"
    ]
   },
   {
@@ -1377,12 +1412,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9382022471910112\n",
+      "[[303  11]\n",
+      " [ 11  31]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "kneig5=KNeighborsClassifier(n_neighbors=5)\n",
+    "kneig5.fit(X_train,y_train)\n",
+    "y_pred5=kneig5.predict(X_test)\n",
+    "print(accuracy_score(y_test,y_pred5))\n",
+    "print(confusion_matrix(y_test,y_pred5, labels=[0,1]))"
    ]
   },
   {
@@ -1399,7 +1448,9 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "# En este caso, vemos que el coeficiente de correlación se mantiene, y en la predicción ha detectado un falso\n",
+    "# positivo más, mientras que ha predecido un falso negativo menos.\n",
+    "# Siendo el objetivo predecir cuántas más websites maliciosas mejor, este último modelo es mejor para este objetivo."
    ]
   },
   {
@@ -1421,7 +1472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n"
    ]
   }
  ],
