--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -1940,6 +1940,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Considero que nos interesa más tener pocos falsos negativos. Preferimos categorizar las webs maliciosas como maliciosas.\n",
+    "\n",
     "No tiene mala **exactitud**, pero realmente no está predeciendo bien los \"1\". De 34 \"1\" que había ha clasificado 10 bien y 24 mal (como \"0\"). Como el objetivo es encontrar 1, el modelo no predice muy bien. Tiene en entorno un 30% de acierto."
    ]
   },
