--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -1563,7 +1563,7 @@
    "metadata": {},
    "source": [
     "El accuracy score es 0.92 (bastante alto), así que las predicciones a priori son buenas.\n",
-    "Sin embargo, los falsos negativos son más altos que los falsos positivos(17-12). En este caso, sería preferible tener más falsos positivos (categorizar como malicioso un email que no lo es) que los falsos negativos porque estarías dejando entrar emails que el modelo interpreta como no maliciosos.\n"
+    "Sin embargo, los falsos negativos son más altos que los falsos positivos(17-12). En este caso, sería preferible tener más falsos positivos (categorizar como malicioso un ataque que no lo es) que los falsos negativos porque estarías dejando que se produjesen ataques que el modelo interpreta como no maliciosos.\n"
    ]
   },
   {
