commit del viernes

--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -2479,13 +2479,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "### Your conclusions here:\n",
+    "#### Yes! There is an improvement in both metrics!"
    ]
   },
   {
