--- a/module-3/lab-supervised-learning/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning/your-code/main.ipynb
@@ -3827,7 +3827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3849,7 +3849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -3888,7 +3888,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3906,20 +3906,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TN, FP, FN, TP:  311 11 24 10\n",
-      "Accuracy:  0.901685393258427\n",
-      "Precision:  0.47619047619047616\n",
-      "Recall:  0.29411764705882354\n",
-      "F1:  0.3636363636363637\n",
-      "TPR:  0.29411764705882354\n",
-      "FPR:  0.034161490683229816\n"
+      "TN, FP, FN, TP:  296 9 33 18\n",
+      "Accuracy:  0.8820224719101124\n",
+      "Precision:  0.6666666666666666\n",
+      "Recall:  0.35294117647058826\n",
+      "F1:  0.46153846153846156\n",
+      "TPR:  0.35294117647058826\n",
+      "FPR:  0.029508196721311476\n"
      ]
     }
    ],
@@ -3940,7 +3940,7 @@
     "print('Recall: ', recall)\n",
     "print('F1: ', F1)\n",
     "print('TPR: ', TPR)\n",
-    "print('FPR: ', FPR)"
+    "print('FPR: ', FPR)\n"
    ]
   },
   {
@@ -3968,7 +3968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3979,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4000,20 +4000,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TN, FP, FN, TP:  312 10 13 21\n",
-      "Accuracy:  0.9353932584269663\n",
-      "Precision:  0.6774193548387096\n",
-      "Recall:  0.6176470588235294\n",
-      "F1:  0.6461538461538462\n",
-      "TPR:  0.6176470588235294\n",
-      "FPR:  0.031055900621118012\n"
+      "TN, FP, FN, TP:  302 3 17 34\n",
+      "Accuracy:  0.9438202247191011\n",
+      "Precision:  0.918918918918919\n",
+      "Recall:  0.6666666666666666\n",
+      "F1:  0.7727272727272727\n",
+      "TPR:  0.6666666666666666\n",
+      "FPR:  0.009836065573770493\n"
      ]
     }
    ],
@@ -4046,7 +4046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -4057,7 +4057,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4076,20 +4076,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TN, FP, FN, TP:  316 6 13 21\n",
-      "Accuracy:  0.9466292134831461\n",
-      "Precision:  0.7777777777777778\n",
-      "Recall:  0.6176470588235294\n",
-      "F1:  0.6885245901639345\n",
-      "TPR:  0.6176470588235294\n",
-      "FPR:  0.018633540372670808\n"
+      "TN, FP, FN, TP:  300 5 18 33\n",
+      "Accuracy:  0.9353932584269663\n",
+      "Precision:  0.868421052631579\n",
+      "Recall:  0.6470588235294118\n",
+      "F1:  0.7415730337078651\n",
+      "TPR:  0.6470588235294118\n",
+      "FPR:  0.01639344262295082\n"
      ]
     }
    ],
@@ -4115,7 +4115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both models with k = 3 and k = 5 are quite similar, but metrics are slightly higher with k = 5, so in this case I would use that one, although I have run the cells several times and not always k = 5 improves k = 3 results."
+    "Both models with k = 3 and k = 5 are quite similar, I have run the cells several times and not always k = 5 improves k = 3 results, metrics are slightly higher in one or another equally."
    ]
   },
   {
@@ -4133,11 +4133,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "scaler = RobustScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.fit_transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_4 = LogisticRegression(solver = 'lbfgs', multi_class = 'auto')\n",
+    "model_4.fit(X_train_scaled, y_train.values.ravel())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN, FP, FN, TP:  300 5 27 24\n",
+      "Accuracy:  0.9101123595505618\n",
+      "Precision:  0.8275862068965517\n",
+      "Recall:  0.47058823529411764\n",
+      "F1:  0.6\n",
+      "TPR:  0.47058823529411764\n",
+      "FPR:  0.01639344262295082\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model_4.predict(X_test_scaled)\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels = [0,1]).ravel()\n",
+    "precision = tp / (tp + fp)\n",
+    "recall = tp / (tp + fn)\n",
+    "F1 = 2 * ((precision * recall) / (precision + recall))\n",
+    "TPR = tp / (tp + fn)\n",
+    "FPR = fp / (fp + tn)\n",
+    "\n",
+    "print('TN, FP, FN, TP: ', tn, fp, fn, tp)\n",
+    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "print('Precision: ', precision)\n",
+    "print('Recall: ', recall)\n",
+    "print('F1: ', F1)\n",
+    "print('TPR: ', TPR)\n",
+    "print('FPR: ', FPR)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is some improvement after normalizing compared to model_1 (Logistic Regression without scaling), although metrics are still better in model_2 and model_3 (K-Nearest Neighbors without scaling). Conclusion: Feature scaling is good, but logistic regression is the worst model to use for this dataset."
    ]
   }
  ],
