--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -16,7 +16,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import your libraries\n"
+    "#Import your libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n"
    ]
   },
   {
@@ -644,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
