--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -12,11 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import your libraries\n"
+    "#Import your libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
