--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -1667,7 +1667,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here:\n",
+    "patients['labels'] = patients_cluster.labels_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now using a `groupby`, find the mean of every variable in `patients` and group by the `labels` column. This summary will allow us to see how the patients differ between the clusters. Your output should look similar to the image below.\n",
+    "\n",
+    "![groupby mean](../groupby-mean.png)\n",
+    "\n",
+    "Additionally, add a comment to describe which columns have the largest difference between clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1784,14 +1805,13 @@
        "3                 0.542169  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "patients['labels'] = patients_cluster.labels_\n",
     "patients.groupby(['labels']).mean()"
    ]
   },
@@ -1799,28 +1819,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now using a `groupby`, find the mean of every variable in `patients` and group by the `labels` column. This summary will allow us to see how the patients differ between the clusters. Your output should look similar to the image below.\n",
-    "\n",
-    "![groupby mean](../groupby-mean.png)\n",
-    "\n",
-    "Additionally, add a comment to describe which columns have the largest difference between clusters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Your comment here:\n",
-    "#### Depending on the X, but mostly cluster 1 and cluster 3"
+    "#### Depending on the X, but mostly cluster 0 and cluster 3"
    ]
   },
   {
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "plt.scatter(x=X[:,0], y=X[:,1], c=y;"
    ]
   }
  ],
